<resources>
    <string name="app_name">DaiET</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="item_name">Item Name</string>
    <string name="item_price">Price</string>
    <string name="save">Save</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_price">Enter Item Price</string>
    <string name="expenses">Expenses</string>
    <string name="investment_saving">Investment / Saving</string>
</resources>
